01_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-app
  type: NodePort
  ports:
  - port: 3000
    targetPort: 30005
