02_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-nj
  labels:
    name: myingress-nj
spec:
  rules:
  - host: nodejs.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web
            port: 
              number: 8080
